--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "dependencies": {
     "@google-cloud/pubsub": "3.1.0",
     "cors": "^2.8.5",
-    "dotenv": "16.0.2",
     "express": "4.18.1",
     "mongoose": "6.5.4",
     "mongoose-unique-validator": "3.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "dotenv": "16.0.2"
   }
 }
